1. AMLL 歌词引擎核心修复（useAMLLEngine.ts）
update() 改传 delta 增量而非绝对时间（根本性修复）
暂停时 tick 不停止，用 frozenMs 冻结，保持 AMLL 动画活跃
歌词跳转多帧收敛法 + Y 轴弹簧外科手术归位
官方 line-click 事件 + +50ms 偏移防止高亮偏移
setAlignPosition(0.382) 高亮行黄金分割位置
移动端 container 注册 { passive: false } 解决 [Intervention] 警告

2. 歌词格式解析全面升级（lrcToAMLLAdapter.ts）
支持 7 种格式：LRC / LDDC 逐字 / ESlyric / ELRC / SRT / ASS / 网易云混合

斜杠翻译分离，翻译去除 offset 标记
offset 单调递增双重保障

3. LyricView.vue 移动端重构

lyricsRef 始终渲染，AMLL 只初始化一次
lyrics-panel 统一容器，PC 端右侧定位，移动端覆盖
flipToLyrics() 封面点击切换

4. 画中画歌词修复（usePictureInPicture.js）

删除旧 parsedLyrics 字段
修复硬编码 localhost:8080
显示 currentLyricText 实时当前行

5. Player Store 扩展（player.js）

新增 _amllLines 和 currentLyricText
updateTime 实时更新当前行纯文本

6. 歌词搜索后端清洗（SongController.java）

支持所有格式时间戳清洗：LDDC / ESlyric / ASS / SRT / 网易云混合 / 斜杠翻译